--- a/接口文档.md
+++ b/接口文档.md
@@ -54,13 +54,16 @@
   |password|string|密码|
   #### response
   ```
-  {
+   {
   "status":200,
   "message":"success",
   "data":{
-    "userType": 0 // 0 签到端用户  |   1 管理端用户
+    
+    "userType": 0 // 0 用户  |   1 管理员 | 2 账户不存在 |3 密码错误
   }
   }
+  
+
   ```
   
 * #### 检测是否登陆
@@ -80,6 +83,15 @@
   ```
   POST /logout
   ```
+  
+   #### response
+  ```
+  {
+  "status":200,
+  "message":"success",
+  "data":true //true 成功注销  | false 失败
+  }
+  ```
 
 * #### 注册
   ```
@@ -89,11 +101,15 @@
   
   |Name|Type|Description|
   |---|---|---|
-  |userType|number|用户类型|
   |username|string|用户名|
   |password|string|密码|
+  |pay_password|string|支付密码|
   |name|string|姓名|
-  |profile|file|本人正脸照片|
+  |phone|string|电话号码|
+  |profile_a|file|本人身份证照片带脸的|
+  |profile_b|file|本人身份证照片戴国徽的|
+  |id|string|身份证号|
+  |gender|number|性别  0是女 1是男 | 
   
 ### 用户
 * #### 获取用户信息
@@ -104,18 +120,22 @@
   
   |Name|Type|Description|
   |---|---|---|
-  |id|string|用户名|
+  |username|string|用户名|
   **id缺省时 返回自己的信息**
+  //后台确认用户权限 只有管理员才能看别人的信息
   #### response
   ```
   {
   "status":200,
   "message":"success",
   "data":{
-    "userType":0,
+    "userType":0/1,   
     "username":"liupenghao",//用户名
-    "profile":"https://host/**.jpg"，//头像url
     "name":"刘鹏昊",//姓名
+    "gender':0/1 //0女 1男
+    "phone":18560125097  //电话号码
+    "id":370102199711111111  //身份证号
+    "credit":15   //信誉值
   }
   }
   ```
@@ -125,32 +145,39 @@
   ```
   ##### input
   要修改的字段
+  |Name|Type|Description|
+  |---|---|---|
+
+  |password|string|密码|
+  |phone|string|电话号码|
 
   
-### 群体
-一个群体由管理者创建，记录签到者的签到信息
+### 房源
+一个房源由用户创建
 
-group： 
-
-|key|type|Description|
-|---|---|---|
-|id|string|群体口令/id|
-|owner|string|创建者id|
-|name|string|群体名|
-|state|boolean|群体签到状态true开启 false关闭|
-|checked|boolean|是否完成签到 true已签到 false未签到|
-|role|number|调用接口人的身份 1成员 2管理者 0其他|
-|members|Array|群体成员|
-|needLocation|Boolean|是否需要验证地理位置|
-|needFace|Boolean|是否需要验证人脸|
-
-location:
+house： 
 
 |key|type|Description|
 |---|---|---|
-|lng|Number|经度|
-|lat|Number|纬度|
-|effectiveDistance|Number|有效定位距离，在此距离内才被允许签到 单位：米|
+|id|string|房产证号|
+|owner_id|string|拥有者的身份证号|
+|owner|string|拥有者的账号|
+|state|number|可租用状态, 0 下线状态 1 发布状态 2 删除状态|  //删除状态也就是用户自己选择删除记录
+|role|number|调用接口人的身份 1用户 2管理员 0其他|
+|low_location|json|简略地址|
+|specific_location|string|详细地址 "2号楼3单元1801"|
+|floor|number|楼层 eg. 18 |
+|elevator|boolean|true 有电梯 false 无电梯 |
+
+
+low_location 
+|key|type|Description|
+|---|---|---|
+|provi|string|省份|
+|city|string|市|
+|sector|string|区|
+|commu_name|string|小区名|
+
 
 members  
 
@@ -161,9 +188,9 @@ members
 |state|boolean|签到状态 true 已签到 false 待签到|
 
 
-* #### 获取群体信息(u|m)
+* #### 获取房源详细信息(u|m)
   ```
-  GET /group
+  GET /house
   ```
   ##### parameters
   |Name|Type|Description|
