--- a/接口文档.md
+++ b/接口文档.md
@@ -159,8 +159,9 @@ house：
 
 |key|type|Description|
 |---|---|---|
-|id|string|房产证号|
+|house_id|string|房产证号|
 |owner_id|string|拥有者的身份证号|
+|owner_name|string|拥有者的姓名|
 |owner|string|拥有者的账号|
 |state|number|可租用状态, 0 下线状态 1 发布状态 2 删除状态|  //删除状态也就是用户自己选择删除记录
 |role|number|调用接口人的身份 1用户 2管理员 0其他|
@@ -168,24 +169,23 @@ house：
 |specific_location|string|详细地址 "2号楼3单元1801"|
 |floor|number|楼层 eg. 18 |
 |elevator|boolean|true 有电梯 false 无电梯 |
+|lease|number|租金 5000 |
+|lease_inter|number|0 全部 1 500元以下 2 500-1000元   3 1000-1500元 4 1500-2000元 5 2000元以上 |
+|lease_type|number| 0 全部 1 整租 2 合租 |
+|house_type|number| 0 全部 1 一室 2 二室 3 其他 |
+|house_credit|number| 房子信誉值  eg: 16 |
+|house_comment|array| 房子评论  |
 
 
-low_location 
+
+low_location：
+
 |key|type|Description|
 |---|---|---|
 |provi|string|省份|
 |city|string|市|
 |sector|string|区|
 |commu_name|string|小区名|
-
-
-members  
-
-|key|type|Description|
-|---|---|---|
-|username|string|用户名|
-|name|string|姓名|
-|state|boolean|签到状态 true 已签到 false 待签到|
 
 
 * #### 获取房源详细信息(u|m)
@@ -195,26 +195,38 @@ members
   ##### parameters
   |Name|Type|Description|
   |---|---|---|
-  |id|string|口令|
+  |house_id|string|房产证号|
   ##### <a name="get-group-response">response</a>
   **注：**
-  1. 用户为该群体的成员或管理者：
-      1. 附加**state**
-      2. **state**为true时 成员附加**checked**  管理者附加**members**
-  2. 关于地理位置信息,用户为该群体的成员或管理者：
-      1. 附加**needLocation**，表明是否需要验证地理位置
-      2. 用户为该群体的管理者，且needLocation为True时 需附加**location**
-  2. 关于人脸识别,用户为该群体的成员或管理者：附加**needFace**，表明是否需要验证人脸
-    
+
   ```
   {
   "status":200,
   "message":"success",
   "data":{
-      "id":"sdfwenk",//口令
-      "owner":"liupenghao"，//创建者username
-      "name":"2016操作系统7班",//群体名称
-      "role":1,
+      "house_id":"sdfwenk31345",//房产证号
+      "owner_id":"37012506546564"，//房主身份证号
+      "owner":"quyanso111",//拥有者的账号
+      "owner_name":"曲延松",//拥有者的姓名
+      "role":1,     //调用这个接口的人是管理者还是用户
+      
+      
+|house_id|string|房产证号|
+|owner_id|string|拥有者的身份证号|
+|owner_name|string|拥有者的姓名|
+|owner|string|拥有者的账号|
+|state|number|可租用状态, 0 下线状态 1 发布状态 2 删除状态|  //删除状态也就是用户自己选择删除记录
+|role|number|调用接口人的身份 1用户 2管理员 0其他|
+|low_location|json|简略地址|
+|specific_location|string|详细地址 "2号楼3单元1801"|
+|floor|number|楼层 eg. 18 |
+|elevator|boolean|true 有电梯 false 无电梯 |
+|lease|number|租金 5000 |
+|lease_inter|number|0 全部 1 500元以下 2 500-1000元   3 1000-1500元 4 1500-2000元 5 2000元以上 |
+|lease_type|number| 0 全部 1 整租 2 合租 |
+|house_type|number| 0 全部 1 一室 2 二室 3 其他 |
+|house_credit|number| 房子信誉值  eg: 16 |
+|house_comment|array| 房子评论  |
       
       //以下为附加信息
       
