--- a/接口文档.md
+++ b/接口文档.md
@@ -208,55 +208,31 @@ low_location：
       "owner":"quyanso111",//拥有者的账号
       "owner_name":"曲延松",//拥有者的姓名
       "role":1,     //调用这个接口的人是管理者还是用户
-      
-      
-|house_id|string|房产证号|
-|owner_id|string|拥有者的身份证号|
-|owner_name|string|拥有者的姓名|
-|owner|string|拥有者的账号|
-|state|number|可租用状态, 0 下线状态 1 发布状态 2 删除状态|  //删除状态也就是用户自己选择删除记录
-|role|number|调用接口人的身份 1用户 2管理员 0其他|
-|low_location|json|简略地址|
-|specific_location|string|详细地址 "2号楼3单元1801"|
-|floor|number|楼层 eg. 18 |
-|elevator|boolean|true 有电梯 false 无电梯 |
-|lease|number|租金 5000 |
-|lease_inter|number|0 全部 1 500元以下 2 500-1000元   3 1000-1500元 4 1500-2000元 5 2000元以上 |
-|lease_type|number| 0 全部 1 整租 2 合租 |
-|house_type|number| 0 全部 1 一室 2 二室 3 其他 |
-|house_credit|number| 房子信誉值  eg: 16 |
-|house_comment|array| 房子评论  |
-      
-      //以下为附加信息
-      
-      //if 管理者||成员 附加state
-      "state":true,
-      
-      //if 管理者 附加members
-      "members":[
-      {
-        "username":"quyansong",
-        "name":"曲延松",
-        "state":true
+      "state":0,    //可租用状态
+      "low_location":{
+          "provi":"山东省",
+          "city":"济南市",
+          "sector":"历下区",
+          "commu_name":"奥龙官邸",
       },
-      ],
-      
-      //if 成员 附加checked
-      "checked":true，
-      
-      //if 管理者||成员 附加needLocation
-      "needLocation":true,
-      
-      //if 管理者&&needLocation 附加location
-      "location":{
-        "lng":116.331398,
-        "lat":39.897445,
-        "effectiveDistance":50
-      },
-      
-      //if 管理者||成员 附加needFace
-      "needFace":true,
-
+      "specific_location":"2号楼3单元1801",
+      "floor":18
+      "elevator":true
+      "lease":3800
+      "house_type":1  // 1 一室 2 二室 3 其他
+      "house_credit":16,
+      "house_comment":[
+        {
+          "user_id":"quyans111",   //评论人账号名
+          "comment":"这个房子挺不错适合居住",   //评论内容
+          "comment_photo":[
+            profile1,
+            profile2,
+            profile3         //评论的图片   格式未想好
+          ],
+          ......
+        }
+      ]
   }
   }
   ```
