--- a/接口文档.md
+++ b/接口文档.md
@@ -236,6 +236,34 @@ low_location：
   }
   }
   ```
+   * #### 搜索
+  ```
+  POST /search
+  ```
+  ##### input
+  |Name|Type|Description|
+  |low_location|json|简略地址|
+  |lease_inter|number|0 全部 1 500元以下 2 500-1000元   3 1000-1500元 4 1500-2000元 5 2000元以上 |
+  |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
+  |lease_type|number| 0 全部 1 整租 2 合租 |
+   #### response
+  ```
+  {
+  "status":200,
+  "message":"success",
+  "data":[
+        {
+          "low_location":"山东省济南市历下区**小区",
+          "lease":"5000",
+          "house_type":"2",
+          "lease_type":"1"
+        }，
+        ...
+    ]
+  }
+  ```
+  
+  
 * #### 获取已加入的/创建的群体的信息(u|m)
   ```
   GET /group/list
