--- a/接口文档.md
+++ b/接口文档.md
@@ -30,11 +30,11 @@
   
   | userType | description | code |
   | -------- | ----------- | ---- |
-  | 签到端用户(u) |可以进行签到|0|
-  | 管理端用户(m) |对签到端用户管理|1|
+  | 用户(u) |进行日常操作|0|
+  | 管理员(m) |管理用户|1|
   
   **文中将会分别在每个接口后面标志以表示接口权限情况**
-  * (u):需要为签到端
+  * (u):需要为用户
   * (m):需要为管理端
   * (u|m):需要为签到端或管理端管理端，即只要登录即可
   * 缺省:不需要任何权限
@@ -139,6 +139,56 @@
   }
   }
   ```
+  
+  * #### 获取账户余额（u）
+  ```
+  GET /balance
+  ```
+  ##### params
+  
+  |Name|Type|Description|
+  |---|---|---|
+  |username|string|用户名|
+  **id缺省时 返回自己的信息**
+  //后台确认用户权限 只有管理员才能看别人的信息
+  #### response
+  ```
+  {
+  "status":200,
+  "message":"success",
+  "data":{ 
+    "username":"liupenghao",//用户名
+    "name":"刘鹏昊",//姓名
+    "balance":300000eth //账户余额
+  }
+  }
+  ```
+  
+    * #### 充值（u）
+  ```
+  POST /account
+  ```
+  ##### input
+  
+  |Name|Type|Description|
+  |---|---|---|
+  |account|number|充值金额|
+  
+  **id缺省时 返回自己的信息**
+  //后台确认用户权限 只有管理员才能看别人的信息
+  #### response
+  ```
+  {
+  "status":200,
+  "message":"success",
+  "data":{ 
+    "username":"liupenghao",//用户名
+    "name":"刘鹏昊",//姓名
+    "balance":300000eth //充值后的账户余额
+  }
+  }
+  ```
+  
 * #### 修改用户信息
   ```
   POST /user
@@ -231,40 +281,23 @@ low_location：
             profile3         //评论的图片   格式未想好
           ],
           ......
-        }
+        },
+        
+        {
+          "user_id":"quyans111",   //评论人账号名
+          "comment":"这个房子挺不错适合居住",   //评论内容
+          "comment_photo":[
+            profile1,
+            profile2,
+            profile3         //评论的图片   格式未想好
+          ],
+          ......
+        },
+        
       ]
   }
   }
   ```
-   * #### 搜索
-  ```
-  POST /search
-  ```
-  ##### input
-  |Name|Type|Description|
-  |---|---|---|
-  |low_location|json|简略地址|
-  |lease_inter|number|0 全部 1 500元以下 2 500-1000元   3 1000-1500元 4 1500-2000元 5 2000元以上 |
-  |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
-  |lease_type|number| 0 全部 1 整租 2 合租 |
-   #### response
-  ```
-  {
-  "status":200,
-  "message":"success",
-  "data":[
-        {
-          "low_location":"山东省济南市历下区**小区",
-          "lease":"5000",
-          "house_type":"2",
-          "lease_type":"1"
-        }，
-        ...
-    ]
-  }
-  ```
-  
-  
 * #### 获取已加入的/创建的群体的信息(u|m)
   ```
   GET /group/list
