--- a/接口文档.md
+++ b/接口文档.md
@@ -175,6 +175,7 @@ house：
 |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
 |house_credit|number| 房子信誉值  eg: 16 |
 |house_comment|array| 房子评论  |
+|verify|boolean| 是否经过验证，true 通过了 false没通过  |
 
 
 
@@ -195,7 +196,7 @@ low_location：
   ##### parameters
   |Name|Type|Description|
   |---|---|---|
-  |house_id|string|房产证号|
+  |house_hash|string|房产证号|
   ##### <a name="get-group-response">response</a>
   **注：**
 
@@ -204,8 +205,9 @@ low_location：
   "status":200,
   "message":"success",
   "data":{
-      "house_id":"sdfwenk31345",//房产证号
+      "house_hash":"sdfwenk31345",//房产证号
       "owner_id":"37012506546564"，//房主身份证号
+      "verify":"true"   //经过验证
       "owner":"quyanso111",//拥有者的账号
       "owner_name":"曲延松",//拥有者的姓名
       "role":1,     //调用这个接口的人是管理者还是用户
