--- a/接口文档.md
+++ b/接口文档.md
@@ -85,7 +85,7 @@
   POST /logout
   ```
   
-   #### response
+  #### response
   ```
   {
   "status":200,
@@ -122,6 +122,7 @@
   |Name|Type|Description|
   |---|---|---|
   |username|string|用户名|
+  
   **id缺省时 返回自己的信息**
   //后台确认用户权限 只有管理员才能看别人的信息
   #### response
@@ -163,8 +164,10 @@
   |Name|Type|Description|
   |---|---|---|
   |username|string|用户名|
-  **id缺省时 返回自己的信息**
+  
+  **username缺省时 返回自己的信息**
   //后台确认用户权限 只有管理员才能看别人的信息
+  
   #### response
   ```
   {
@@ -210,6 +213,7 @@
   |Name|Type|Description|
   |---|---|---|
   |username|string|用户名|
+  
   **id缺省时 返回自己的交易记录**
   //后台确认用户权限 只有管理员才能看别人的交易记录
   #### response
@@ -229,46 +233,44 @@
                 “city”："济南市"，
                 “sector”:"历下区",
                 "commu_name":"奥龙官邸"
-            }，
-       "specific_location":"2号楼3单元1801",
         }，
-
+       "specific_location":"2号楼3单元1801",
         “record”:[
-        {
-        "time": 2019-1-13    //交易时间
-        "gas": 500  //花费的手续费
-        “low_location”：{
+          {"time": 2019-1-13    //交易时间
+            "gas": 500  //花费的手续费
+            “low_location”：{
                 “provi”:"山东省"，
                 “city”："济南市"，
                 “sector”:"历下区",
                 "commu_name":"奥龙官邸"
             }，
-       "specific_location":"2号楼3单元1801",
-        }，
+          "specific_location":"2号楼3单元1801",
+          }，
         ...
-    ]，
+       ]，
+     }
   }
-}
   ```
 
-
 * #### 获取我的房子 (u)
+
+
   ```
   GET /myhouse
   ```
-  ##### params
+   ##### params
   
   |Name|Type|Description|
   |---|---|---|
   |house_hash|string|房子哈希|
-  ****
 
-  #### response
-  ```
+ #### response
+ ```
+ 
   {
-  "status":200,
-  "message":"success",
-  "data":{
+      "status":200,
+      "message":"success",
+      "data":{
     
         "house_pic":[
             "sdfadfasfasfasdfa" ，   //图片一的哈希值
