--- a/接口文档.md
+++ b/接口文档.md
@@ -338,7 +338,8 @@
   POST /user
   ```
   ##### input
-  要修改的字段
+  
+  
   |Name|Type|Description|
   |---|---|---|
   |password|string|密码|
@@ -490,6 +491,7 @@ low_location：
   ```
 
  * #### 评价房子
+ 
   ```
   POST /house_valuationn
   ```
@@ -497,12 +499,14 @@ low_location：
   |Name|Type|Description|
   |---|---|---|
   |house_hash|string|房子房产证hash|
-  |text_|string|房子房产证hash|
-  |house_hash|string|房子房产证hash|
+  |house_level|number|1~5 五个级别|
+  |comment_word|string|文字评价|
+  |comment_pic|file|图片评价|
    #### response
-  "data": {
-          "phone":"12345678910"
-        }
+    ```
+  {
+  "status":200,
+  "message":"success",
   }
   ```
   
