--- a/接口文档.md
+++ b/接口文档.md
@@ -327,7 +327,9 @@
   |elevator|boolean|有无电梯|
   |lease|3800|租金|
   |phone|string|电话号码|
-  |photo|file|添加的房屋照片|
+  
+  
+  //不可添加图片
   
 
 
@@ -460,11 +462,11 @@ low_location：
   "message":"success",
   "data":[
         {
+          "photo":"sadfadsfadf"   //一张图片的hash
           "low_location":"山东省济南市历下区**小区",
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
-          "house_credit":"15"
         }，
         ...
     ]
@@ -503,11 +505,247 @@ low_location：
   |comment_word|string|文字评价|
   |comment_pic|file|图片评价|
    #### response
-    ```
+  ```
   {
   "status":200,
   "message":"success",
   }
   ```
+  
+  
+  * #### 获取所有用户信息(m)
+  ```
+  GET /User_all
+  ```
+
+  ```
+  {
+  "status":200,
+  "message":"success",
+  "data":{
+    "users":[
+     {
+      "username":"liupenghao",//用户名
+      "name":"曲延松",         //姓名
+      "gender':0            //0女 1男
+      "phone":18560125097  //电话号码
+      "id":370102199711111111  //身份证号
+      "credit":15         //信誉值
+    }，
+    
+    {
+      "username":"liupenghao",//用户名
+      "name":"曲延松",         //姓名
+      "gender':1            //0女 1男
+      "phone":18560125097  //电话号码
+      "id":370102199711111111  //身份证号
+      "credit":15         //信誉值
+    },
+    
+     {
+      "username":"liupenghao",//用户名
+      "name":"张三",         //姓名
+      "gender':0            //0女 1男
+      "phone":18560125097  //电话号码
+      "id":370102199711111111  //身份证号
+      "credit":15         //信誉值
+    },
+  }
+  }
+  ```
+  
+  * #### 修改用户信息(m)
+ 
+  ```
+  POST /User_change
+  ```
+  ##### input
+  |Name|Type|Description|
+  |---|---|---|
+  |username|string|用户名|
+  |credit|number|eg:35  信誉值|
+  
+   #### response
+  ```
+  {
+  "status":200,
+  "message":"success",
+  }
+  ```
+  
+    * #### 获取房屋列表(m)
+    
+  ```
+  GET /house_all (m)
+  ```
+
+
+  ```
+  {
+  "status":200,
+  "message":"success",
+  "data":{
+      "verified":[            //通过验证的房子
+          {
+          "photo":"sadfadsfadf"   //一张图片的hash
+          "low_location":"山东省济南市历下区**小区",
+          "lease":"5000",
+          "house_type":"2",
+          "lease_type":"1",
+         }，
+         
+         {
+          "photo":"sadfadsfadf"   //一张图片的hash
+          "low_location":"山东省济南市历下区**小区",
+          "lease":"5000",
+          "house_type":"2",
+          "lease_type":"1",
+         }，
+         
+         {
+          "photo":"sadfadsfadf"   //一张图片的hash
+          "low_location":"山东省济南市历下区**小区",
+          "lease":"5000",
+          "house_type":"2",
+          "lease_type":"1",
+         }，
+         
+        ],
+        
+       
+       "non_verified":[            //通过验证的房子
+          {
+          "photo":"sadfadsfadf"   //一张图片的hash
+          "low_location":"山东省济南市历下区**小区",
+          "lease":"5000",
+          "house_type":"2",
+          "lease_type":"1",
+         }，
+         
+         {
+          "photo":"sadfadsfadf"   //一张图片的hash
+          "low_location":"山东省济南市历下区**小区",
+          "lease":"5000",
+          "house_type":"2",
+          "lease_type":"1",
+         }，
+         
+         {
+          "photo":"sadfadsfadf"   //一张图片的hash
+          "low_location":"山东省济南市历下区**小区",
+          "lease":"5000",
+          "house_type":"2",
+          "lease_type":"1",
+         }，
+        ],
+  }
+  }
+  ```
+  
+  
+  
+  * #### 租客发起签约请求(u)
+允许的请求者：1.用户
+
+  ```
+  POST /tract/set
+  ```
+
+  ##### parmas
+
+  |Name|Type|Description|
+  |---|---|---|
+  |house_hash|string|房产证的哈希|
+  |owner|string|房主账号|
+  
+  ##### response
+  ```
+  {
+   "status":200,
+   "message":"success",
+   "data":{
+           "requestID":"xxoo",
+           }
+   }
+  ```
+  
+
+* #### 房主获取所有与他有关的签约请求(m)
+ ```
+  GET /tract/get
+  ```
+
+
+  #### response
+  ```
+  {
+  "status":200,
+  "message":"success",
+  "data":{
+    leaves:[
+      {
+      "requestID":"xxoo",
+      "username":"xxdd"，   //请求的人的用户名
+      "name":"曲延松",       //请求的人的姓名
+      "house_hash":"adfafd",    //请求的房子hash
+      "commu_name":"茗筑美嘉"，  //房子小区名
+      },
+      {
+      "requestID":"xsxoo",
+      "username":"xxdd"，   //请求的人的用户名
+      "name":"曲延松",       //请求的人的姓名
+      "house_hash":"adfafd",    //请求的房子hash
+      "commu_name":"奥龙官邸"，  //房子小区名
+      },
+    ]
+  }
+  }
+  ```
+
+* #### 请假请求反馈(m)
+ ```
+  POST /tract/response
+  ```
+  ##### params
+
+  |Name|Type|Description|
+  |---|---|---|
+  |requestID|string|请求id|
+  |request_response|boolean|请求反馈 true 同意签约  false 不同意签约|
+  |pay_password|string|请求反馈 true 同意签约  false 不同意签约|
+
+  #### response
+  ```
+  {
+  "status":200,
+  "message":"OK",
+  }
+  ```
+  
+  * #### 请假反馈获取(u)
+ ```
+  GET /leave/{requestID}/feedback
+  ```
+  ```
+  例如：
+  GET /leave/XIDJGE/feedback  
+  ```
+
+  #### response
+  ```
+  {
+  "status":200,
+  "message":"success",
+  "data":{
+        "checkID":"aadfif",
+        "groupID":"xxoo",
+        "request_status":0,                 # 0：未处理  1：同意   2：拒绝
+   },
+  }
+  ```
+  
+  
+  
+
   
 
