--- a/接口文档.md
+++ b/接口文档.md
@@ -1,7 +1,7 @@
 接口文档
 # 接口文档
 
-负责人：刘鹏昊
+负责人：曲延松
 
 ## 0
 * baseurl : /api/v1/
@@ -25,14 +25,14 @@
   |200|success|
   |403|权限不足|
   
-* 签到端和管理签到端公用一套接口，后台分别给予不同权限
+* 签到端和管理端公用一套接口，后台分别给予不同权限
 * 权限说明 role  
   共有2种用户类型：
   
   | userType | description | code |
   | -------- | ----------- | ---- |
-  | 签到端用户(u) |可以进行签到|0|
-  | 管理端用户(m) |对签到端用户管理|1|
+  | 签到端用户(u) |可以进行日常操作|0|
+  | 管理端用户(m) |对用户进行管理|1|
   
   **文中将会分别在每个接口后面标志以表示接口权限情况**
   * (u):需要为签到端
