--- a/接口文档.md
+++ b/接口文档.md
@@ -46,7 +46,7 @@
 
 * #### 登陆
   ```
-  POST /login
+  POST /user/login
   ```
   ##### input
   Name|Type  |Description
@@ -69,7 +69,7 @@
   
 * #### 检测是否登陆
   ```
-  POST /hasLoggedIn
+  POST /user/hasLoggedIn
   ```
   #### response
   ```
@@ -82,7 +82,7 @@
 
 * #### 注销
   ```
-  POST /logout
+  POST /user/logout
   ```
   
   #### response
@@ -96,7 +96,7 @@
 
 * #### 注册
   ```
-  POST /register
+  POST /user/register
   ```
   ##### input
   
@@ -115,7 +115,7 @@
 ### 用户
 * #### 获取用户信息
   ```
-  GET /user
+  GET /user/user
   ```
   ##### params
   
@@ -157,7 +157,7 @@
 
 * #### 获取用户余额
   ```
-  GET /balance
+  GET /user/balance
   ```
   ##### params
   
@@ -183,7 +183,7 @@
 
 * #### 充值（u）
   ```
-  POST /account
+  POST /user/account
   ```
   ##### input
   
@@ -206,7 +206,7 @@
 
 * #### 获取交易记录 (u/m)
   ```
-  GET /trans_record
+  GET /user/trans_record
   ```
   ##### params
   
@@ -256,7 +256,7 @@
 
 
   ```
-  GET /myhouse
+  GET /user/myhouse
   ```
    ##### params
   
@@ -315,7 +315,7 @@
 
 * #### 修改我的房子 (u)
   ```
-  POST /myhouse
+  POST /user/myhouse
   ```
  
    ##### input
@@ -337,7 +337,7 @@
 
 * #### 修改用户信息
   ```
-  POST /user
+  POST /user/info
   ```
   ##### input
   
@@ -388,7 +388,7 @@ low_location：
 
 * #### 获取房源详细信息(u|m)
   ```
-  GET /house
+  GET /house/speinfo
   ```
   ##### parameters
   |Name|Type|Description|
@@ -445,7 +445,7 @@ low_location：
 
    * #### 搜索
   ```
-  POST /search
+  POST /house/search
   ```
   ##### input
   |Name|Type|Description|
@@ -475,7 +475,7 @@ low_location：
   
    * #### 联系房主
   ```
-  POST /contact_owner
+  POST /user/contact_owner
   ```
   ##### input
   |Name|Type|Description|
@@ -495,7 +495,7 @@ low_location：
  * #### 评价房子
  
   ```
-  POST /house_valuationn
+  POST /house/valuationn
   ```
   ##### input
   |Name|Type|Description|
@@ -515,7 +515,7 @@ low_location：
   
   * #### 获取所有用户信息(m)
   ```
-  GET /User_all
+  GET /user/all_info
   ```
 
   ```
@@ -557,7 +557,7 @@ low_location：
   * #### 修改用户信息(m)
  
   ```
-  POST /User_change
+  POST /user/changeinfo
   ```
   ##### input
   |Name|Type|Description|
@@ -576,7 +576,7 @@ low_location：
     * #### 获取房屋列表(m)
     
   ```
-  GET /house_all (m)
+  GET /house/allinfo (m)
   ```
 
 
