--- a/接口文档.md
+++ b/接口文档.md
@@ -495,7 +495,7 @@ low_location：
  * #### 评价房子
  
   ```
-  POST /house/valuationn
+  POST /house/valuation
   ```
   ##### input
   |Name|Type|Description|
