--- a/接口文档.md
+++ b/接口文档.md
@@ -295,7 +295,7 @@
       "elevator":true
       "lease":3800
       "house_type":1  // 1 一室 2 二室 3 其他
-      "house_credit":16,
+      "house_owner_credit":16,       //房主的信誉
       "house_comment":[
         {
           "user_id":"quyans111",   //评论人账号名
@@ -370,7 +370,7 @@ house：
 |lease_inter|number|0 全部 1 500元以下 2 500-1000元   3 1000-1500元 4 1500-2000元 5 2000元以上 |
 |lease_type|number| 0 全部 1 整租 2 合租 |
 |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
-|house_credit|number| 房子信誉值  eg: 16 |
+|house_owner_credit|number| 房主信誉值  eg: 16 |
 |house_comment|array| 房子评论  |
 |verify|boolean| 是否经过验证，true 通过了 false没通过  |
 
