--- a/接口文档.md
+++ b/接口文档.md
@@ -225,17 +225,18 @@
     "username":"liupenghao",//用户名
     "name":"刘鹏昊",//姓名
     “record”:[
-        {
-        "time": 2019-1-13    //交易时间
-        "gas": 500  //花费的手续费
-        “low_location”：{
-                “provi”:"山东省"，
-                “city”："济南市"，
-                “sector”:"历下区",
-                "commu_name":"奥龙官邸"
-        }，
-       "specific_location":"2号楼3单元1801",
-        “record”:[
+          {
+            "time": 2019-1-13    //交易时间
+            "gas": 500  //花费的手续费
+            “low_location”：{
+                    “provi”:"山东省"，
+                    “city”："济南市"，
+                    “sector”:"历下区",
+                    "commu_name":"奥龙官邸"
+            }，
+           "specific_location":"2号楼3单元1801"
+          },
+
           {"time": 2019-1-13    //交易时间
             "gas": 500  //花费的手续费
             “low_location”：{
@@ -246,7 +247,7 @@
             }，
           "specific_location":"2号楼3单元1801",
           }，
-        ...
+          ...
        ]，
      }
   }
