--- a/接口文档.md
+++ b/接口文档.md
@@ -386,6 +386,8 @@ low_location：
 |sector|string|区|
 |commu_name|string|小区名|
 
+注意：现在provi 默认为山东省 city 默认为 济南市 留着字段以后扩展
+前端向后端发的时候 不带commu_name 字段
 
 * #### 获取房源详细信息(u|m)
   ```
