--- a/接口文档.md
+++ b/接口文档.md
@@ -372,6 +372,7 @@ house：
 |lease_type|number| 0 全部 1 整租 2 合租 |
 |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
 |house_owner_credit|number| 房主信誉值  eg: 16 |
+|house_level|number|1~5 五个级别 |
 |house_comment|array| 房子评论  |
 |verify|boolean| 是否经过验证，true 通过了 false没通过  |
 
@@ -429,6 +430,7 @@ low_location：
       "lease":3800
       "house_type":1  // 1 一室 2 二室 3 其他
       "house_credit":16,
+      "house_level":5 //房子五个等级
       "house_comment":[
         {
           "user_id":"quyans111",   //评论人账号名
