--- a/接口文档.md
+++ b/接口文档.md
@@ -729,11 +729,11 @@ low_location：
   
   * #### 请假反馈获取(u)
  ```
-  GET /leave/{requestID}/feedback
+  GET /tract/{requestID}/feedback
   ```
   ```
   例如：
-  GET /leave/XIDJGE/feedback  
+  GET /tract/XIDJGE/feedback  
   ```
 
   #### response
