--- a/接口文档.md
+++ b/接口文档.md
@@ -575,6 +575,10 @@ low_location：
   {
   "status":200,
   "message":"success",
+  "data":{
+            "username":"qys",
+            "credit":30     //最新的信誉值
+        }
   }
   ```
   
