--- a/接口文档.md
+++ b/接口文档.md
@@ -234,6 +234,7 @@
                     “sector”:"历下区",
                     "commu_name":"奥龙官邸"
             }，
+         
            "specific_location":"2号楼3单元1801"
           },
 
@@ -291,6 +292,7 @@
           "sector":"历下区",
           "commu_name":"奥龙官邸",
       },
+      "low_str_location":"山东省济南市历下区奥龙官邸",
       "specific_location":"2号楼3单元1801",
       "floor":18
       "elevator":true
@@ -364,6 +366,7 @@ house：
 |state|number|可租用状态, 0 下线状态 1 发布状态 2 删除状态|  //删除状态也就是用户自己选择删除记录
 |role|number|调用接口人的身份 1用户 2管理员 0其他|
 |low_location|json|简略地址|
+|low_str_location|string|简略地址字符串形式|
 |specific_location|string|详细地址 "2号楼3单元1801"|
 |floor|number|楼层 eg. 18 |
 |elevator|boolean|true 有电梯 false 无电梯 |
@@ -424,6 +427,7 @@ low_location：
           "sector":"历下区",
           "commu_name":"奥龙官邸",
       },
+      low_str_location:"山东省济南市历下区奥龙官邸",
       "specific_location":"2号楼3单元1801",
       "floor":18
       "elevator":true
@@ -469,7 +473,8 @@ low_location：
   "data":[
         {
           "photo":"sadfadsfadf"   //一张图片的hash
-          "low_location":"山东省济南市历下区**小区",
+       
+          low_str_location:"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
@@ -599,7 +604,7 @@ low_location：
       "verified":[            //通过验证的房子
           {
           "photo":"sadfadsfadf"   //一张图片的hash
-          "low_location":"山东省济南市历下区**小区",
+          "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
@@ -607,7 +612,7 @@ low_location：
          
          {
           "photo":"sadfadsfadf"   //一张图片的hash
-          "low_location":"山东省济南市历下区**小区",
+          "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
@@ -615,7 +620,7 @@ low_location：
          
          {
           "photo":"sadfadsfadf"   //一张图片的hash
-          "low_location":"山东省济南市历下区**小区",
+          "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
@@ -627,7 +632,7 @@ low_location：
        "non_verified":[            //通过验证的房子
           {
           "photo":"sadfadsfadf"   //一张图片的hash
-          "low_location":"山东省济南市历下区**小区",
+          "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
@@ -635,7 +640,7 @@ low_location：
          
          {
           "photo":"sadfadsfadf"   //一张图片的hash
-          "low_location":"山东省济南市历下区**小区",
+          "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
@@ -643,7 +648,7 @@ low_location：
          
          {
           "photo":"sadfadsfadf"   //一张图片的hash
-          "low_location":"山东省济南市历下区**小区",
+          "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
