--- a/接口文档.md
+++ b/接口文档.md
@@ -472,7 +472,7 @@ low_location：
   "message":"success",
   "data":[
         {
-          "photo":"sadfadsfadf"   //一张图片的hash
+          "house_pic":"sadfadsfadf"   //一张图片的hash
        
           low_str_location:"山东省济南市历下区奥龙官邸",
           "lease":"5000",
@@ -603,7 +603,7 @@ low_location：
   "data":{
       "verified":[            //通过验证的房子
           {
-          "photo":"sadfadsfadf"   //一张图片的hash
+          "house_pic":"sadfadsfadf"   //一张图片的hash
           "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
@@ -611,7 +611,7 @@ low_location：
          }，
          
          {
-          "photo":"sadfadsfadf"   //一张图片的hash
+          "house_pic":"sadfadsfadf"   //一张图片的hash
           "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
@@ -619,7 +619,7 @@ low_location：
          }，
          
          {
-          "photo":"sadfadsfadf"   //一张图片的hash
+          "house_pic":"sadfadsfadf"   //一张图片的hash
           "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
@@ -631,7 +631,7 @@ low_location：
        
        "non_verified":[            //通过验证的房子
           {
-          "photo":"sadfadsfadf"   //一张图片的hash
+          "house_pic":"sadfadsfadf"   //一张图片的hash
           "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
@@ -639,7 +639,7 @@ low_location：
          }，
          
          {
-          "photo":"sadfadsfadf"   //一张图片的hash
+          "house_pic":"sadfadsfadf"   //一张图片的hash
           "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
@@ -647,7 +647,7 @@ low_location：
          }，
          
          {
-          "photo":"sadfadsfadf"   //一张图片的hash
+          "house_pic":"sadfadsfadf"   //一张图片的hash
           "low_str_location":"山东省济南市历下区奥龙官邸",
           "lease":"5000",
           "house_type":"2",
