--- a/接口文档.md
+++ b/接口文档.md
@@ -463,7 +463,7 @@ low_location：
   |lease_inter|number|0 全部 1 500元以下 2 500-1000元   3 1000-1500元 4 1500-2000元 5 2000元以上 |
   |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
   |lease_type|number| 0 全部 1 整租 2 合租 |
-  |elevator|boolean| 0 全部 1 有电梯  |
+  |elevator|boolean| false 全部 true 有电梯  |
 
    #### response
   ```
