--- a/接口文档.md
+++ b/接口文档.md
@@ -665,7 +665,7 @@ low_location：
 允许的请求者：1.用户
 
   ```
-  POST /tract/set
+  POST /tract/userSet
   ```
 
   ##### parmas
@@ -687,9 +687,9 @@ low_location：
   ```
   
 
-* #### 房主获取所有与他有关的签约请求(m)
+* #### 房主获取所有与他有关的签约请求(u)
  ```
-  GET /tract/get
+  GET /tract/ownerGet
   ```
 
 
@@ -699,13 +699,14 @@ low_location：
   "status":200,
   "message":"success",
   "data":{
-    leaves:[
+    tract:[
       {
       "requestID":"xxoo",
       "username":"xxdd"，   //请求的人的用户名
       "name":"曲延松",       //请求的人的姓名
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"茗筑美嘉"，  //房子小区名
+      "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
       },
       {
       "requestID":"xsxoo",
@@ -713,15 +714,16 @@ low_location：
       "name":"曲延松",       //请求的人的姓名
       "house_hash":"adfafd",    //请求的房子hash
       "commu_name":"奥龙官邸"，  //房子小区名
+      "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
       },
     ]
   }
   }
   ```
 
-* #### 请假请求反馈(m)
+* #### 请假请求反馈(u)
  ```
-  POST /tract/acquire
+  POST /tract/ownerRes
   ```
   ##### params
 
@@ -739,13 +741,13 @@ low_location：
   }
   ```
   
-  * #### 请假反馈获取(u)
+  * #### 请求反馈获取(u)
  ```
-  GET /tract/{requestID}/feedback
+  GET /tract/userGet
   ```
   ```
   例如：
-  GET /tract/XIDJGE/feedback  
+  GET /tract/userGet
   ```
 
   #### response
@@ -754,12 +756,66 @@ low_location：
   "status":200,
   "message":"success",
   "data":{
-        "checkID":"aadfif",
-        "groupID":"xxoo",
-        "request_status":0,                 # 0：未处理  1：同意   2：拒绝
+      tract:[
+        {
+        "requestID":"xxoo",
+        "username":"xxdd"，   //请求的人的用户名
+        "name":"曲延松",       //请求的人的姓名
+        "house_hash":"adfafd",    //请求的房子hash
+        "commu_name":"茗筑美嘉"，  //房子小区名
+        "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认   
+        },
+        {
+        "requestID":"xsxoo",
+        "username":"xxdd"，   //请求的人的用户名
+        "name":"曲延松",       //请求的人的姓名
+        "house_hash":"adfafd",    //请求的房子hash
+        "commu_name":"奥龙官邸"，  //房子小区名
+        "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认（双方达成合约）  
+        },
+    ]
    },
   }
   ```
+  
+  * #### 用户确认交易(u)
+ ```
+  POST /tract/userIden
+  ```
+  ##### params
+
+  |Name|Type|Description|
+  |---|---|---|
+  |requestID|string|请求id|
+  |requestIdentify|boolean|请求反馈 true 同意签约  false 不同意签约|
+  |pay_password|string|用户的支付密码|
+  
+* #### 用户确认交易(u)
+ ```
+  POST /tract/userIden
+  ```
+  ##### params
+
+  |Name|Type|Description|
+  |---|---|---|
+  |requestID|string|请求id|
+  |requestIdentify|boolean|请求反馈 true 同意签约  false 不同意签约|
+  |pay_password|string|用户的支付密码|
+  
+  
+* #### 卖家确认交易(u)
+ ```
+  POST /tract/userIden
+  ```
+  ##### params
+
+  |Name|Type|Description|
+  |---|---|---|
+  |requestID|string|请求id|
+  |requestIdentify|boolean|请求反馈 true 同意签约  false 不同意签约|
+  |pay_password|string|用户的支付密码|
+
+
   
   
   
