--- a/接口文档.md
+++ b/接口文档.md
@@ -433,7 +433,7 @@ low_location：
       "elevator":true
       "lease":3800
       "house_type":1  // 1 一室 2 二室 3 其他
-      "house_credit":16,
+      "house_owner_credit":16,
       "house_level":5 //房子五个等级
       "house_comment":[
         {
