--- a/接口文档.md
+++ b/接口文档.md
@@ -378,7 +378,8 @@ house：
 |house_level|number|1~5 五个级别 |
 |house_comment|array| 房子评论  |
 |verify|boolean| 是否经过验证，true 通过了 false没通过  |
-
+|long|string| 经度  eg "113.45"  |
+|lat|string| 纬度  eg "184.45"  |
 
 
 low_location：
@@ -429,7 +430,9 @@ low_location：
       },
       low_str_location:"山东省济南市历下区奥龙官邸",
       "specific_location":"2号楼3单元1801",
-      "floor":18
+      "floor":18,
+      "long":"113.45"   //房屋经度
+      "lat":"138.49"   //房屋纬度
       "elevator":true
       "lease":3800
       "house_type":1  // 1 一室 2 二室 3 其他
