--- a/接口文档.md
+++ b/接口文档.md
@@ -394,6 +394,81 @@ low_location：
 注意：现在provi 默认为山东省 city 默认为 济南市 留着字段以后扩展
 前端向后端发的时候 不带commu_name 字段
 
+
+* #### 创建房源(u)
+  ```
+  GET /house/setUpHouse
+  ```
+  ##### parameters
+  |Name|Type|Description|
+  |---|---|---|
+  |house_id|string|房产证号|
+  |state|number| 1 |  //用户上传并展示房源
+  |low_location|json|简略地址|
+  |specific_location|string|详细地址 "2号楼3单元1801"|
+  |floor|number|楼层 eg. 18 |
+  |elevator|boolean|true 有电梯 false 无电梯 |
+  |lease|number|租金 5000 |
+  |lease_type|number| 0 全部 1 整租 2 合租 |
+  |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
+  |long|string| 经度  eg "113.45"  |
+  |lat|string| 纬度  eg "184.45"  |
+  |house_pic|file| 一系列图片|
+  ##### <a name="get-group-response">response</a>
+  **注：**
+
+  ```
+  {
+  "status":200,
+  "message":"success",
+  "data":{
+       "house_pic":[
+            "sdfadfasfasfasdfa" ，   //图片一的哈希值
+            “sdfadsfadsfasf”,
+            "sadfadsfasfsa"
+        ]
+      "house_hash":"sdfwenk31345",//房产证号
+      "owner_id":"37012506546564"，//房主身份证号
+      "verify":"true"   //经过验证
+      "owner":"quyanso111",//拥有者的账号
+      "owner_name":"曲延松",//拥有者的姓名
+      "role":1,     //调用这个接口的人是管理者还是用户
+      "state":0,    //可租用状态
+      "low_location":{
+          "provi":"山东省",
+          "city":"济南市",
+          "sector":"历下区",
+          "commu_name":"奥龙官邸",
+      },
+      low_str_location:"山东省济南市历下区奥龙官邸",
+      "specific_location":"2号楼3单元1801",
+      "floor":18,
+      "long":"113.45"   //房屋经度
+      "lat":"138.49"   //房屋纬度
+      "elevator":true
+      "lease":3800
+      "house_type":1  // 1 一室 2 二室 3 其他
+      "house_owner_credit":16,
+      "house_level":5 //房子五个等级
+      "house_comment":[
+        {
+          "user_id":"quyans111",   //评论人账号名
+          "comment":"这个房子挺不错适合居住",   //评论内容
+          "comment_pic":[
+                "sdfadfasfasfasdfa" ，   //图片一的哈希值
+                “sdfadsfadsfasf”,
+                "sadfadsfasfsa"
+          ],
+          ......
+        }
+      ]
+  }
+  }
+  ```
+
+
+
+
 * #### 获取房源详细信息(u|m)
   ```
   GET /house/speinfo
