--- a/接口文档.md
+++ b/接口文档.md
@@ -395,7 +395,7 @@ low_location：
 前端向后端发的时候 不带commu_name 字段
 
 
-* #### 创建房源(u)
+* #### 添加房源(u)
   ```
   GET /house/setUpHouse
   ```
@@ -413,6 +413,7 @@ low_location：
   |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
   |long|string| 经度  eg "113.45"  |
   |lat|string| 纬度  eg "184.45"  |
+  |area|string|房屋面积  eg: '356'  |
   |house_pic|file| 一系列图片|
   ##### <a name="get-group-response">response</a>
   **注：**
@@ -497,6 +498,7 @@ low_location：
       "owner_name":"曲延松",//拥有者的姓名
       "role":1,     //调用这个接口的人是管理者还是用户
       "state":0,    //可租用状态
+      "area":356,    //房屋面积
       "low_location":{
           "provi":"山东省",
           "city":"济南市",
