--- a/接口文档.md
+++ b/接口文档.md
@@ -378,7 +378,7 @@ house：
 |house_level|number|1~5 五个级别 |
 |house_comment|array| 房子评论  |
 |verify|boolean| 是否经过验证，true 通过了 false没通过  |
-|long|string| 经度  eg "113.45"  |
+|lon|string| 经度  eg "113.45"  |
 |lat|string| 纬度  eg "184.45"  |
 
 
@@ -411,7 +411,7 @@ low_location：
   |lease|number|租金 5000 |
   |lease_type|number| 0 全部 1 整租 2 合租 |
   |house_type|number| 0 全部 1 一室 2 二室 3 其他 |
-  |long|string| 经度  eg "113.45"  |
+  |lon|string| 经度  eg "113.45"  |
   |lat|string| 纬度  eg "184.45"  |
   |area|string|房屋面积  eg: '356'  |
   |house_pic|file| 一系列图片|
