--- a/接口文档.md
+++ b/接口文档.md
@@ -397,7 +397,7 @@ low_location：
 
 * #### 添加房源(u)
   ```
-  GET /house/setUpHouse
+  POST /house/setUpHouse
   ```
   ##### parameters
   |Name|Type|Description|
