--- a/接口文档.md
+++ b/接口文档.md
@@ -801,7 +801,7 @@ low_location：
   }
   ```
 
-* #### 请假请求反馈(u)
+* #### 签约请求反馈(u)
  ```
   POST /tract/ownerRes
   ```
@@ -821,14 +821,11 @@ low_location：
   }
   ```
   
-  * #### 请求反馈获取(u)
+  * #### 用户获取与他相关的请求(u)
  ```
   GET /tract/userGet
   ```
-  ```
-  例如：
-  GET /tract/userGet
-  ```
+
 
   #### response
   ```
@@ -851,7 +848,7 @@ low_location：
         "name":"曲延松",       //请求的人的姓名
         "house_hash":"adfafd",    //请求的房子hash
         "commu_name":"奥龙官邸"，  //房子小区名
-        "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认（双方达成合约）  
+        "state":2   //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认（双方达成合约）  
         },
     ]
    },
