基本功能全部实现

--- a/接口文档.md
+++ b/接口文档.md
@@ -258,7 +258,7 @@
 
 
   ```
-  GET /user/myHouse
+  GET /user/myhouse
   ```
    ##### params
   
@@ -329,6 +329,7 @@
   |state|number|可租用状态 0 不可租用 1可租用|
   |elevator|boolean|有无电梯|
   |lease|3800|租金|
+  |phone|string|电话号码|
   
   
   //不可添加图片
@@ -396,7 +397,7 @@ low_location：
 
 * #### 添加房源(u)
   ```
-  POST /house/setUpHouse
+  GET /house/setUpHouse
   ```
   ##### parameters
   |Name|Type|Description|
@@ -800,7 +801,7 @@ low_location：
   }
   ```
 
-* #### 签约请求反馈(u)
+* #### 请假请求反馈(u)
  ```
   POST /tract/ownerRes
   ```
@@ -820,11 +821,14 @@ low_location：
   }
   ```
   
-  * #### 用户获取与他相关的请求(u)
+  * #### 请求反馈获取(u)
  ```
   GET /tract/userGet
   ```
-
+  ```
+  例如：
+  GET /tract/userGet
+  ```
 
   #### response
   ```
@@ -847,7 +851,7 @@ low_location：
         "name":"曲延松",       //请求的人的姓名
         "house_hash":"adfafd",    //请求的房子hash
         "commu_name":"奥龙官邸"，  //房子小区名
-        "state":2   //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认（双方达成合约）  
+        "state":0    //  0未回复  1 卖家同意买家未确认  2 买家确认卖家未确认 3、 卖家确认（双方达成合约）  
         },
     ]
    },
