--- a/接口文档.md
+++ b/接口文档.md
@@ -558,7 +558,8 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
-          "elevator":true
+          "elevator":true,
+          "house_hash":"sdfadfafsaf"   //房子房产证的哈希
         }，
         ...
     ]
