--- a/接口文档.md
+++ b/接口文档.md
@@ -690,6 +690,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
+          "house_hash":"asdfsdf",
          }，
          
          {
@@ -698,6 +699,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
+          "house_hash":"asdfsdf",
          }，
          
          {
@@ -706,6 +708,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
+          "house_hash":"asdfsdf",
          }，
          
         ],
@@ -718,6 +721,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
+          "house_hash":"asdfsdf",
          }，
          
          {
@@ -726,6 +730,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
+          "house_hash":"asdfsdf",
          }，
          
          {
@@ -734,6 +739,7 @@ low_location：
           "lease":"5000",
           "house_type":"2",
           "lease_type":"1",
+          "house_hash":"asdfsdf",
          }，
         ],
   }
